--- a/main.css
+++ b/main.css
@@ -1,40 +1,174 @@
 * {
   box-sizing: border-box;
-  font-family: "DM Sans";
+  font-family: "DM Sans", Raleway;
   margin: 0;
   padding: 0;
+}
+
+body {
+  scroll-behavior: smooth;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-left: 20px;
+}
+@media (max-width: 320px) {
+  .wrapper {
+    max-width: 320px;
+  }
+}
+.wrapper_max {
+  max-width: 1300px;
 }
 
 .logo {
   font-size: 24px;
   font-weight: 600;
+  font-style: italic;
+  align-self: center;
   color: #518e62;
+}
+@media (max-width: 1200px) {
+  .logo {
+    display: none;
+  }
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   padding: 34px 52px 34px 52px;
+  height: 128px;
+  position: relative;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+}
+@media (max-width: 768px) {
+  .header {
+    justify-content: start;
+  }
 }
 .header__links {
+  position: relative;
   display: flex;
   align-self: center;
   gap: 40px;
   list-style: none;
+  font-size: 20px;
+  font-weight: 500;
 }
-.header a {
-  text-decoration: none;
+@media (max-width: 1200px) {
+  .header__links {
+    display: none;
+  }
 }
 
+#menu-toggle {
+  display: none;
+}
+#menu-toggle:checked ~ .side-menu {
+  display: flex;
+}
+#menu-toggle:checked + .menu-icon span:nth-child(1) {
+  transform: rotate(45deg) translateY(10px);
+}
+#menu-toggle:checked + .menu-icon span:nth-child(2) {
+  opacity: 0;
+}
+#menu-toggle:checked + .menu-icon span:nth-child(3) {
+  transform: rotate(-45deg) translateY(-11px);
+}
+
+.menu-icon {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+  height: 25px;
+  width: 30px;
+  z-index: 1;
+}
+.menu-icon span {
+  display: block;
+  height: 3px;
+  background: #000;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+.side-menu {
+  display: none;
+  position: absolute;
+  top: 24px;
+  left: 34px;
+  background-color: #edf1f5;
+  width: 250px;
+  padding: 20px;
+  flex-direction: column;
+}
+.side-menu ul {
+  list-style: none;
+  padding: 20px 50px;
+}
+.side-menu ul li {
+  margin-bottom: 15px;
+}
+.side-menu ul li a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+}
+.side-menu ul li a:hover {
+  color: #518e62;
+}
+
+@media (max-width: 768px) {
+  .menu-icon {
+    display: flex;
+  }
+}
 .main__container {
   background-image: url("./assets/images/green bg.jpg");
   background-repeat: no-repeat;
   height: 726px;
+  padding: 141px 0 0 90px;
+}
+@media (max-width: 500px) {
+  .main__container {
+    padding-left: 45px;
+  }
+}
+@media (max-width: 375px) {
+  .main__container {
+    padding-left: 15px;
+  }
 }
 
 .main__title {
   font-size: 96px;
   color: white;
+  font-style: italic;
+}
+@media (max-width: 500px) {
+  .main__title {
+    font-size: 70px;
+  }
+}
+@media (max-width: 375px) {
+  .main__title {
+    font-size: 65px;
+  }
 }
 
 .main__description {
@@ -49,28 +183,112 @@
 
 .products__title {
   text-align: center;
+  font-size: 36px;
+  font-weight: 500;
 }
 
-.products__imagesContainer {
-  display: flex;
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
-  gap: 37px;
+  gap: 12px;
   margin-top: 32px;
+}
+.gallery img {
+  transform: transform 0.3s;
+}
+.gallery img:hover {
+  transform: scale(1.03);
+}
+@media (max-width: 1400px) {
+  .gallery {
+    grid-template-columns: repeat(2, 320px);
+  }
+}
+@media (max-width: 700px) {
+  .gallery {
+    grid-template-columns: 1fr;
+    justify-self: center;
+  }
+}
+
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  inset: 0;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+.lightbox img {
+  max-width: 40%;
+  min-height: 40%;
+  border-radius: 8px;
+  z-index: 1;
+  transform: scale(0.8);
+  transition: transform 0.3s ease;
+}
+.lightbox:target {
+  display: flex;
+}
+.lightbox .overlay {
+  position: absolute;
+  inset: 0;
+  cursor: pointer;
+}
+.lightbox img {
+  transform: scale(1);
+}
+
+.decoration__img {
+  max-width: 636px;
+}
+@media (max-width: 1200px) {
+  .decoration__img {
+    max-width: 576px;
+  }
+}
+@media (max-width: 768px) {
+  .decoration__img {
+    max-width: 636px;
+  }
 }
 
 .decoration {
   margin-top: 170px;
+  padding: 0 40px 0 40px;
 }
 
 .decoration__container {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 768px) {
+  .decoration__container {
+    flex-direction: column;
+    justify-self: center;
+  }
+}
 
 .decoration__greenBlock {
   background-color: #284f30;
-  height: 532px;
-  width: 685px;
+  padding: 124px 0 0 91px;
+  padding-right: 51px;
+}
+@media (max-width: 1200px) {
+  .decoration__greenBlock {
+    padding-right: 0;
+    padding-left: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .decoration__greenBlock {
+    padding-top: 85px;
+    margin-top: -120px;
+    padding: 50px;
+  }
 }
 
 .decorative__text {
@@ -78,22 +296,267 @@
   font-size: 55px;
   color: white;
 }
+@media (max-width: 1024px) {
+  .decorative__text {
+    font-size: 45px;
+  }
+}
+@media (max-width: 854px) {
+  .decorative__text {
+    font-size: 34px;
+  }
+}
+
+.cards__section {
+  margin-top: 112px;
+}
+
+.cards {
+  display: flex;
+  justify-self: center;
+  gap: 36px;
+  margin-top: 61px;
+}
+@media (max-width: 1400px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 1024px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+
+.cardsContainer__title {
+  font-weight: 500;
+  font-size: 43px;
+  text-align: center;
+}
 
 .card {
-  width: 425px;
-  height: 314px;
+  width: 411px;
+  height: 290px;
   background-image: radial-gradient(circle, #597c5d 30%, #4a694f 70%);
+  border-radius: 15px;
+}
+
+@media (max-width: 1400px) {
+  #card__three {
+    display: grid;
+    grid-column: 1/3;
+    width: auto;
+  }
+}
+@media (max-width: 1024px) {
+  #card__three {
+    grid-column: auto;
+  }
+}
+
+.card__title {
+  color: white;
+  font-size: 36px;
+}
+
+.card__description {
+  color: white;
+  font-size: 20px;
 }
 
 .card__circle {
-  width: 121px;
+  width: 123px;
   height: 119px;
+  background-color: white;
+  margin: 100px 0 0 46px;
+  border-radius: 100%;
 }
 
+.card__img {
+  width: 100px;
+  height: 100px;
+}
+
+.card__imgContainer {
+  display: flex;
+  padding: 100px 0 0 46px;
+  gap: 38px;
+}
+
+.AboutTheCompany {
+  margin-top: 63px;
+  font-weight: 500;
+}
+.AboutTheCompany__textContainer {
+  margin-top: 68px;
+  font-size: 25px;
+}
+.AboutTheCompany__title {
+  font-size: 48px;
+  font-weight: 500;
+  text-align: center;
+}
 .AboutTheCompany__text {
   margin-top: 33px;
 }
-
 .AboutTheCompany__bottomText {
   margin-top: 66px;
+}
+
+.Adventages {
+  margin-top: 148px;
+  font-weight: 500;
+}
+.Adventages__container {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+}
+.Adventages__list {
+  margin-top: 67px;
+  display: flex;
+  flex-direction: column;
+  gap: 31px;
+  font-size: 24px;
+}
+.Adventages__list li {
+  position: relative;
+}
+.Adventages__list li::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -55px;
+  top: 7px;
+  width: 34px;
+  height: 30px;
+  background: url("./assets/images/Green diamond.png");
+}
+.Adventages__title {
+  font-size: 40px;
+  font-weight: 500;
+  text-align: center;
+}
+.Adventages__bottomText {
+  margin-top: 74px;
+  font-size: 25px;
+}
+
+.footer {
+  border-top: 53px solid #44624a;
+  margin-top: 92px;
+  padding: 21px 0 56px 0;
+}
+.footer__container {
+  display: flex;
+  gap: 52px;
+}
+@media (max-width: 1400px) {
+  .footer__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 35px;
+    justify-content: center;
+  }
+}
+@media (max-width: 1024px) {
+  .footer__container {
+    grid-template-columns: 1fr;
+  }
+}
+.footer__logo {
+  font-weight: 600;
+}
+@media (max-width: 1400px) {
+  .footer__logoContainer {
+    display: none;
+  }
+}
+.footer__listsContainer {
+  text-align: center;
+}
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 20px;
+}
+.footer__bottomContainer {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-top: 105px;
+}
+@media (max-width: 768px) {
+  .footer__bottomContainer {
+    display: block;
+  }
+}
+.footer__line {
+  width: 651px;
+  height: 1px;
+  border: #efefef solid 0.5px;
+}
+@media (max-width: 768px) {
+  .footer__line {
+    width: auto;
+    margin-top: 25px;
+  }
+}
+
+.adress__container {
+  justify-self: center;
+}
+
+.addressTitle {
+  text-align: center;
+}
+
+.address {
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 23px;
+}
+
+.phoneNumberTitle {
+  font-weight: 500;
+  font-size: 18px;
+  color: #5d5d5d;
+  margin-top: 20px;
+}
+
+.phoneNumber {
+  font-size: 24px;
+  margin-top: 12px;
+}
+
+.schedule__container {
+  justify-self: center;
+}
+
+.schedule {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  margin-top: 30px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.copyright {
+  font-weight: 600;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "DM Sans", Raleway;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  scroll-behavior: smooth;
 }/*# sourceMappingURL=main.css.map */
