--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+* {
+  box-sizing: border-box;
+  font-family: "DM Sans", Raleway;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 li {
   list-style: none;
 }
@@ -10,6 +21,12 @@ a {
 .wrapper {
   max-width: 1000px;
   margin: 0 auto;
+  padding-left: 7px;
+}
+@media (max-width: 320px) {
+  .wrapper {
+    max-width: 320px;
+  }
 }
 .wrapper_max {
   max-width: 1300px;
@@ -19,15 +36,40 @@ a {
   font-size: 24px;
   font-weight: 600;
   font-style: italic;
+  align-self: center;
   color: #518e62;
+}
+@media (max-width: 1200px) {
+  .logo {
+    display: none;
+  }
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   padding: 34px 52px 34px 52px;
+  height: 128px;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .header {
+    justify-content: start;
+  }
+}
+@media (max-width: 1200px) {
+  .header {
+    height: auto;
+    justify-self: center;
+  }
+}
+@media (max-width: 768px) {
+  .header {
+    justify-self: start;
+  }
 }
 .header__links {
+  position: relative;
   display: flex;
   align-self: center;
   gap: 40px;
@@ -35,18 +77,120 @@ a {
   font-size: 20px;
   font-weight: 500;
 }
+@media (max-width: 1200px) {
+  .header__links {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .header__links {
+    display: none;
+  }
+}
 
+#menu-toggle {
+  display: none;
+}
+#menu-toggle:checked ~ .side-menu {
+  display: flex;
+}
+#menu-toggle:checked + .menu-icon span:nth-child(1) {
+  transform: rotate(45deg) translateY(10px);
+}
+#menu-toggle:checked + .menu-icon span:nth-child(2) {
+  opacity: 0;
+}
+#menu-toggle:checked + .menu-icon span:nth-child(3) {
+  transform: rotate(-45deg) translateY(-11px);
+}
+
+.menu-icon {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+  height: 25px;
+  width: 30px;
+  z-index: 1;
+}
+.menu-icon span {
+  display: block;
+  height: 3px;
+  background: #000;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+.side-menu {
+  display: none;
+  position: absolute;
+  top: 24px;
+  left: 34px;
+  background-color: #edf1f5;
+  width: 250px;
+  padding: 20px;
+  flex-direction: column;
+}
+.side-menu ul {
+  list-style: none;
+  padding: 20px 50px;
+}
+.side-menu ul li {
+  margin-bottom: 15px;
+}
+.side-menu ul li a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+}
+.side-menu ul li a:hover {
+  color: #518e62;
+}
+
+@media (max-width: 768px) {
+  .menu-icon {
+    display: flex;
+  }
+}
 .main__container {
   background-image: url("./assets/images/green bg.jpg");
   background-repeat: no-repeat;
   height: 726px;
   padding: 141px 0 0 90px;
 }
+@media (max-width: 1200px) {
+  .main__container {
+    padding-left: 45px;
+  }
+}
+@media (max-width: 375px) {
+  .main__container {
+    padding-left: 15px;
+  }
+}
+@media (max-width: 375px) {
+  .main__container {
+    padding-left: 7px;
+  }
+}
 
 .main__title {
   font-size: 96px;
   color: white;
   font-style: italic;
+}
+@media (max-width: 500px) {
+  .main__title {
+    font-size: 70px;
+  }
+}
+@media (max-width: 375px) {
+  .main__title {
+    font-size: 65px;
+  }
 }
 
 .main__description {
@@ -58,6 +202,17 @@ a {
 .products {
   margin-top: 60px;
 }
+@media (max-width: 425px) {
+  .products {
+    padding-right: 8px;
+  }
+}
+
+@media (max-width: 425px) {
+  .products__img {
+    width: 300px;
+  }
+}
 
 .products__title {
   text-align: center;
@@ -65,35 +220,145 @@ a {
   font-weight: 500;
 }
 
-.products__imagesContainer {
-  display: flex;
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
   gap: 12px;
   margin-top: 32px;
+}
+.gallery img {
+  transform: transform 0.3s;
+}
+.gallery img:hover {
+  transform: scale(1.03);
+}
+@media (max-width: 1400px) {
+  .gallery {
+    grid-template-columns: repeat(2, 320px);
+  }
+}
+@media (max-width: 700px) {
+  .gallery {
+    grid-template-columns: 1fr;
+    justify-self: center;
+  }
+}
+
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  inset: 0;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+.lightbox img {
+  max-width: 40%;
+  min-height: 40%;
+  border-radius: 8px;
+  z-index: 1;
+  transform: scale(0.8);
+  transition: transform 0.3s ease;
+}
+@media (max-width: 768px) {
+  .lightbox img {
+    max-width: 80%;
+  }
+}
+.lightbox:target {
+  display: flex;
+}
+.lightbox .overlay {
+  position: absolute;
+  inset: 0;
+  cursor: pointer;
+}
+.lightbox img {
+  transform: scale(1);
 }
 
 .decoration__img {
   max-width: 636px;
 }
+@media (max-width: 1200px) {
+  .decoration__img {
+    max-width: 576px;
+  }
+}
+@media (max-width: 1024px) {
+  .decoration__img {
+    max-width: 400px;
+  }
+}
+@media (max-width: 425px) {
+  .decoration__img {
+    max-width: 300px;
+  }
+}
 
 .decoration {
   margin-top: 170px;
+  padding: 0 40px 0 32px;
 }
 
 .decoration__container {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 1024px) {
+  .decoration__container {
+    flex-direction: column;
+    justify-self: center;
+  }
+}
 
 .decoration__greenBlock {
   background-color: #284f30;
-  padding: 124px 0 0 91px;
+  padding: 124px 50px 0 50px;
+}
+@media (max-width: 1200px) {
+  .decoration__greenBlock {
+    padding: 100px 10px;
+    max-width: 400px;
+  }
+}
+@media (max-width: 425px) {
+  .decoration__greenBlock {
+    max-width: 300px;
+  }
+}
+@media (max-width: 992px) {
+  .decoration__greenBlock {
+    padding-left: 55px;
+  }
 }
 
 .decorative__text {
   font-weight: 500;
   font-size: 55px;
   color: white;
+}
+@media (max-width: 1200px) {
+  .decorative__text {
+    font-size: 45px;
+  }
+}
+@media (max-width: 992px) {
+  .decorative__text {
+    font-size: 34px;
+  }
+}
+
+.cards__section {
+  margin-top: 112px;
+}
+@media (max-width: 375px) {
+  .cards__section {
+    padding-right: 10px;
+  }
 }
 
 .cards {
@@ -102,11 +367,27 @@ a {
   gap: 36px;
   margin-top: 61px;
 }
+@media (max-width: 1400px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 1024px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
 
 .cardsContainer__title {
   font-weight: 500;
   font-size: 43px;
   text-align: center;
+}
+@media (max-width: 375px) {
+  .cardsContainer__title {
+    font-size: 38px;
+  }
 }
 
 .card {
@@ -114,6 +395,30 @@ a {
   height: 290px;
   background-image: radial-gradient(circle, #597c5d 30%, #4a694f 70%);
   border-radius: 15px;
+}
+@media (max-width: 425px) {
+  .card {
+    width: 290px;
+    height: 235px;
+  }
+}
+
+@media (max-width: 1400px) {
+  #card__three {
+    display: grid;
+    grid-column: 1/3;
+    width: auto;
+  }
+}
+@media (max-width: 1024px) {
+  #card__three {
+    grid-column: auto;
+  }
+}
+@media (max-width: 375px) {
+  #card__three {
+    width: 290px;
+  }
 }
 
 .card__title {
@@ -144,9 +449,16 @@ a {
   padding: 100px 0 0 46px;
   gap: 38px;
 }
+@media (max-width: 425px) {
+  .card__imgContainer {
+    padding: 50px 0 0 6px;
+    gap: 20px;
+  }
+}
 
 .AboutTheCompany {
   margin-top: 63px;
+  font-weight: 500;
 }
 .AboutTheCompany__textContainer {
   margin-top: 68px;
@@ -165,7 +477,8 @@ a {
 }
 
 .Adventages {
-  margin-top: 241px;
+  margin-top: 148px;
+  font-weight: 500;
 }
 .Adventages__container {
   display: flex;
@@ -197,6 +510,15 @@ a {
   font-weight: 500;
   text-align: center;
 }
+@media (max-width: 375px) {
+  .Adventages__title {
+    font-size: 33px;
+  }
+}
+.Adventages__bottomText {
+  margin-top: 74px;
+  font-size: 25px;
+}
 
 .footer {
   border-top: 53px solid #44624a;
@@ -205,7 +527,42 @@ a {
 }
 .footer__container {
   display: flex;
-  gap: 52px;
+  gap: 50px;
+}
+@media (max-width: 1400px) {
+  .footer__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 35px;
+    justify-content: center;
+  }
+}
+@media (max-width: 1024px) {
+  .footer__container {
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+}
+.footer__logo {
+  font-weight: 600;
+}
+@media (max-width: 1400px) {
+  .footer__logoContainer {
+    display: none;
+  }
+}
+@media (max-width: 1024px) {
+  .footer__listsContainer {
+    text-align: center;
+  }
+}
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 20px;
 }
 .footer__bottomContainer {
   display: flex;
@@ -213,7 +570,62 @@ a {
   gap: 30px;
   margin-top: 105px;
 }
+@media (max-width: 768px) {
+  .footer__bottomContainer {
+    display: block;
+  }
+}
 .footer__line {
   width: 651px;
   height: 1px;
+  border: #efefef solid 0.5px;
+}
+@media (max-width: 768px) {
+  .footer__line {
+    width: auto;
+    margin-top: 25px;
+  }
+}
+
+.adress__container {
+  justify-self: center;
+}
+
+.addressTitle {
+  text-align: center;
+}
+
+.address {
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 23px;
+}
+
+.phoneNumberTitle {
+  font-weight: 500;
+  font-size: 18px;
+  color: #5d5d5d;
+  margin-top: 20px;
+}
+
+.phoneNumber {
+  font-size: 24px;
+  margin-top: 12px;
+}
+
+.schedule__container {
+  justify-self: center;
+}
+
+.schedule {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  margin-top: 30px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.copyright {
+  font-weight: 600;
 }/*# sourceMappingURL=styles.css.map */
