--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
   padding: 0;
 }
 
-body {
+html {
   scroll-behavior: smooth;
 }
 
@@ -21,7 +21,7 @@ a {
 .wrapper {
   max-width: 1000px;
   margin: 0 auto;
-  padding-left: 20px;
+  padding-left: 40px;
 }
 @media (max-width: 320px) {
   .wrapper {
@@ -51,11 +51,21 @@ a {
   padding: 34px 52px 34px 52px;
   height: 128px;
   position: relative;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 @media (max-width: 768px) {
   .header {
     justify-content: start;
+  }
+}
+@media (max-width: 1200px) {
+  .header {
+    height: auto;
+    justify-self: center;
+  }
+}
+@media (max-width: 768px) {
+  .header {
+    justify-self: start;
   }
 }
 .header__links {
@@ -69,6 +79,13 @@ a {
 }
 @media (max-width: 1200px) {
   .header__links {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .header__links {
     display: none;
   }
 }
@@ -80,13 +97,17 @@ a {
   display: flex;
 }
 #menu-toggle:checked + .menu-icon span:nth-child(1) {
-  transform: rotate(45deg) translateY(10px);
+  transform: rotate(45deg) translateY(11px);
+  background: #d2e8cb;
+  width: 20px;
 }
 #menu-toggle:checked + .menu-icon span:nth-child(2) {
   opacity: 0;
 }
 #menu-toggle:checked + .menu-icon span:nth-child(3) {
   transform: rotate(-45deg) translateY(-11px);
+  background: #d2e8cb;
+  width: 20px;
 }
 
 .menu-icon {
@@ -98,39 +119,50 @@ a {
   height: 25px;
   width: 30px;
   z-index: 1;
+  position: relative;
+  left: 8px;
+  top: -6px;
 }
 .menu-icon span {
   display: block;
   height: 3px;
-  background: #000;
+  width: 33px;
   border-radius: 2px;
   transition: 0.3s;
+  background-color: black;
 }
 
 .side-menu {
   display: none;
   position: absolute;
+  border: 2px solid #44624a;
+  border-top: 29px solid #44624a;
+  border-radius: 10px;
+  background-color: #6d8764;
   top: 24px;
   left: 34px;
-  background-color: #edf1f5;
   width: 250px;
+  height: 311px;
   padding: 20px;
   flex-direction: column;
 }
 .side-menu ul {
   list-style: none;
-  padding: 20px 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  text-align: center;
 }
 .side-menu ul li {
   margin-bottom: 15px;
 }
 .side-menu ul li a {
   text-decoration: none;
-  font-weight: bold;
-  color: #000;
+  font-weight: 400;
+  color: #fbfff9;
 }
 .side-menu ul li a:hover {
-  color: #518e62;
+  color: #ffffff;
 }
 
 @media (max-width: 768px) {
@@ -144,7 +176,7 @@ a {
   height: 726px;
   padding: 141px 0 0 90px;
 }
-@media (max-width: 500px) {
+@media (max-width: 1200px) {
   .main__container {
     padding-left: 45px;
   }
@@ -152,6 +184,11 @@ a {
 @media (max-width: 375px) {
   .main__container {
     padding-left: 15px;
+  }
+}
+@media (max-width: 375px) {
+  .main__container {
+    padding-left: 7px;
   }
 }
 
@@ -179,6 +216,17 @@ a {
 
 .products {
   margin-top: 60px;
+}
+@media (max-width: 425px) {
+  .products {
+    padding-right: 8px;
+  }
+}
+
+@media (max-width: 425px) {
+  .products__img {
+    width: 300px;
+  }
 }
 
 .products__title {
@@ -230,6 +278,11 @@ a {
   transform: scale(0.8);
   transition: transform 0.3s ease;
 }
+@media (max-width: 768px) {
+  .lightbox img {
+    max-width: 80%;
+  }
+}
 .lightbox:target {
   display: flex;
 }
@@ -250,22 +303,27 @@ a {
     max-width: 576px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .decoration__img {
-    max-width: 636px;
+    max-width: 400px;
+  }
+}
+@media (max-width: 425px) {
+  .decoration__img {
+    max-width: 300px;
   }
 }
 
 .decoration {
   margin-top: 170px;
-  padding: 0 40px 0 40px;
+  padding: 0 40px 0 32px;
 }
 
 .decoration__container {
   display: flex;
   justify-content: center;
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .decoration__container {
     flex-direction: column;
     justify-self: center;
@@ -273,21 +331,23 @@ a {
 }
 
 .decoration__greenBlock {
-  background-color: #284f30;
-  padding: 124px 0 0 91px;
-  padding-right: 51px;
+  align-self: center;
 }
-@media (max-width: 1200px) {
-  .decoration__greenBlock {
-    padding-right: 0;
-    padding-left: 50px;
+.greenBlockContainer {
+  display: flex;
+  justify-content: center;
+  width: 657px;
+  background-color: #284f30;
+}
+@media (max-width: 1024px) {
+  .greenBlockContainer {
+    max-width: 400px;
+    height: 290px;
   }
 }
-@media (max-width: 768px) {
-  .decoration__greenBlock {
-    padding-top: 85px;
-    margin-top: -120px;
-    padding: 50px;
+@media (max-width: 425px) {
+  .greenBlockContainer {
+    max-width: 300px;
   }
 }
 
@@ -296,19 +356,29 @@ a {
   font-size: 55px;
   color: white;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .decorative__text {
     font-size: 45px;
   }
 }
-@media (max-width: 854px) {
+@media (max-width: 992px) {
   .decorative__text {
     font-size: 34px;
+  }
+}
+@media (max-width: 425px) {
+  .decorative__text {
+    font-size: 30px;
   }
 }
 
 .cards__section {
   margin-top: 112px;
+}
+@media (max-width: 375px) {
+  .cards__section {
+    padding-right: 10px;
+  }
 }
 
 .cards {
@@ -334,12 +404,23 @@ a {
   font-size: 43px;
   text-align: center;
 }
+@media (max-width: 375px) {
+  .cardsContainer__title {
+    font-size: 38px;
+  }
+}
 
 .card {
   width: 411px;
   height: 290px;
   background-image: radial-gradient(circle, #597c5d 30%, #4a694f 70%);
   border-radius: 15px;
+}
+@media (max-width: 425px) {
+  .card {
+    width: 290px;
+    height: 235px;
+  }
 }
 
 @media (max-width: 1400px) {
@@ -352,6 +433,11 @@ a {
 @media (max-width: 1024px) {
   #card__three {
     grid-column: auto;
+  }
+}
+@media (max-width: 375px) {
+  #card__three {
+    width: 290px;
   }
 }
 
@@ -383,6 +469,12 @@ a {
   padding: 100px 0 0 46px;
   gap: 38px;
 }
+@media (max-width: 425px) {
+  .card__imgContainer {
+    padding: 50px 0 0 6px;
+    gap: 20px;
+  }
+}
 
 .AboutTheCompany {
   margin-top: 63px;
@@ -405,7 +497,7 @@ a {
 }
 
 .Adventages {
-  margin-top: 148px;
+  margin-top: 80px;
   font-weight: 500;
 }
 .Adventages__container {
@@ -420,27 +512,29 @@ a {
   gap: 31px;
   font-size: 24px;
 }
-.Adventages__list li {
-  position: relative;
-}
-.Adventages__list li::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: -55px;
-  top: 7px;
-  width: 34px;
-  height: 30px;
-  background: url("./assets/images/Green diamond.png");
-}
 .Adventages__title {
   font-size: 40px;
   font-weight: 500;
   text-align: center;
 }
+@media (max-width: 375px) {
+  .Adventages__title {
+    font-size: 33px;
+  }
+}
 .Adventages__bottomText {
   margin-top: 74px;
   font-size: 25px;
+}
+
+.diamomd__container {
+  display: flex;
+  gap: 42px;
+}
+
+.diamond {
+  width: 34px;
+  height: 30px;
 }
 
 .footer {
@@ -450,12 +544,12 @@ a {
 }
 .footer__container {
   display: flex;
-  gap: 52px;
+  gap: 40px;
 }
 @media (max-width: 1400px) {
   .footer__container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 380px 300px 250px;
     gap: 35px;
     justify-content: center;
   }
@@ -463,6 +557,7 @@ a {
 @media (max-width: 1024px) {
   .footer__container {
     grid-template-columns: 1fr;
+    justify-content: center;
   }
 }
 .footer__logo {
@@ -474,7 +569,8 @@ a {
   }
 }
 .footer__listsContainer {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 .footer__list {
   display: flex;
@@ -484,9 +580,24 @@ a {
   font-weight: 500;
   margin-top: 20px;
 }
+@media (max-width: 1400px) {
+  .footer__list {
+    display: grid;
+    grid-template-columns: repeat(3, 120px);
+  }
+}
+@media (max-width: 1024px) {
+  .footer__list {
+    align-self: center;
+    justify-content: center;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+}
 .footer__bottomContainer {
   display: flex;
   align-items: center;
+  justify-content: space-around;
   gap: 30px;
   margin-top: 105px;
 }
@@ -504,6 +615,12 @@ a {
   .footer__line {
     width: auto;
     margin-top: 25px;
+  }
+}
+
+@media (max-width: 1400px) {
+  .quick__links {
+    text-align: center;
   }
 }
 
@@ -537,6 +654,10 @@ a {
   justify-self: center;
 }
 
+.scheduleTitle {
+  text-align: center;
+}
+
 .schedule {
   display: flex;
   flex-direction: column;
@@ -557,6 +678,6 @@ a {
   padding: 0;
 }
 
-body {
+html {
   scroll-behavior: smooth;
 }/*# sourceMappingURL=main.css.map */
